// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`empty.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  <style>



  </style>
</div>

=====================================output=====================================
<div>
  <style></style>
</div>
================================================================================
`;

exports[`invalid-css.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

<div>
  <style>
    .a {
                    color: red;
    }

    invalid css
  </style>
</div>

=====================================output=====================================
<div>
  <style>
    .a {
                    color: red;
    }

    invalid css
  </style>
</div>
================================================================================
`;

exports[`test.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


<div>
  <style>


    .a {color: red;
    }


  </style>
</div>


<div>
  <style>
    .a {



      color: red;
    }
              .b { color:     blue

};
  </style>
</div>

<div>
  <style>
    .a { color: red; }
  </style>
</div>

=====================================output=====================================
<div>
  <style>
    .a {
      color: red;
    }
  </style>
</div>

<div>
  <style>
    .a {
      color: red;
    }
    .b {
      color: blue;
    }
  </style>
</div>

<div>
  <style>
    .a {
      color: red;
    }
  </style>
</div>
================================================================================
`;

exports[`with-lang-attribute.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  <style lang="css">


    .a { color: red;
    }


  </style>
</div>

=====================================output=====================================
<div>
  <style lang="css">
    .a {
      color: red;
    }
  </style>
</div>
================================================================================
`;

exports[`with-lang-attribute-2.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  <style lang>


    .a {color: red;
    }


  </style>
</div>

=====================================output=====================================
<div>
  <style lang>
    .a {
      color: red;
    }
  </style>
</div>
================================================================================
`;

exports[`with-lang-attribute-3.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

  <style lang="unknown">


    .a {color: red;
    }


  </style>

=====================================output=====================================
<style lang="unknown">


    .a {color: red;
    }


  </style>
================================================================================
`;
